<resources>
    <string name="app_name">AutoRent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_login">Iniciar Sesión</string>
    <string name="ins_mail">Correo Electrónico</string>
    <string name="ins_pass">Contraseña</string>
    <string name="ins_name">Nombre de usuario</string>
    <string name="ins_confPass">Confirmar Contraseña</string>
    <string name="ins_reg">Registrar</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_lgout">Cerrar Sesión</string>
    <string name="btn_resetpass">¿Olvidaste tu contraseña?</string>
    <string name="btn_reg">¿No tienes cuenta? Regístrate aquí</string>
    <string name="btn_rtnLog">¿Ya tienes cuenta? Inicia sesión</string>

    <string-array name="estatus_options">
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>