<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ins_name"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:background="@android:drawable/editbox_background"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ins_pass"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@android:drawable/editbox_background"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:backgroundTint="@android:color/black"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_resetpass"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reg"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>